--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@ sass:
   style: compressed
 
 # Build settings, default theme is minima
-theme: tale
+#theme: tale
+remote_theme: chesterhow/tale
 
 # Gems
 plugins:
@@ -27,6 +28,7 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-seo-tag
+  - jekyll-remote-theme
 
 # Permalinks
 permalink: /:year-:month-:day/:title
